Fix CORS allow all origins